card.js commited

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0e2f71;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(90, 34, 34);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #ae60c0;
 }
 
 @keyframes App-logo-spin {
