Home Page Changes and Navbar Update

--- a/frontend/src/Components/Card.css
+++ b/frontend/src/Components/Card.css
@@ -9,7 +9,8 @@
     background-color 0.4s ease; /* Smooth transitions */
   position: relative;
   overflow: hidden;
-  background: linear-gradient(
+  
+  /*background: linear-gradient(
     135deg,
     #ff9a9e,
     #fad0c4,
